Fix mobile awards page wrapping issue

--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -303,7 +303,7 @@
 
 .alt-project-awarded
 {
-	flex-flow: row;
+	flex-flow: row wrap;
 	align-items: center;
 }
 
